--- a/Ketch/UserInterface/Settings/SettingsView.xib
+++ b/Ketch/UserInterface/Settings/SettingsView.xib
@@ -24,7 +24,6 @@
                 <outlet property="aboutLabel" destination="Api-ed-xez" id="D89-Zr-H2C"/>
                 <outlet property="ageLabel" destination="5ee-BL-JGE" id="feo-rl-ixx"/>
                 <outlet property="avatarView" destination="Nrc-Dc-N50" id="Iv4-yQ-FrW"/>
-                <outlet property="deactivateButton" destination="xdl-4W-oNP" id="Ark-Uq-MZ5"/>
                 <outlet property="educationLabel" destination="20m-eu-yIP" id="PiW-sJ-8kJ"/>
                 <outlet property="heightLabel" destination="pg4-G6-NiR" id="mya-m6-tDG"/>
                 <outlet property="nameLabel" destination="3ic-hO-IZ3" id="wFn-uw-Ivz"/>
@@ -58,21 +57,22 @@
                         <action selector="goBack:" destination="-1" eventType="touchUpInside" id="AgY-dz-6H8"/>
                     </connections>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xdl-4W-oNP" userLabel="DEACTIVATE">
-                    <rect key="frame" x="252" y="543" width="60" height="20"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="r72-wg-Xj7">
+                    <rect key="frame" x="230" y="0.0" width="90" height="60"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="20" id="Fsd-jj-2Sc"/>
-                        <constraint firstAttribute="width" constant="60" id="KsB-vN-2dM"/>
+                        <constraint firstAttribute="width" constant="90" id="7cs-VI-se5"/>
+                        <constraint firstAttribute="height" constant="60" id="vZ9-9z-Rdu"/>
                     </constraints>
-                    <fontDescription key="fontDescription" name="TransatTextStandard" family="Transat Text" pointSize="12"/>
-                    <state key="normal" title="Deactivate">
-                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                    <fontDescription key="fontDescription" name="TransatTextStandard" family="Transat Text" pointSize="15"/>
+                    <state key="normal" title="LOG OUT">
+                        <color key="titleColor" red="0.1450980392" green="0.64705882349999999" blue="0.64705882349999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </state>
                     <connections>
-                        <action selector="deactivateUser:" destination="-1" eventType="touchUpInside" id="T9z-qI-jUK"/>
+                        <action selector="goBack:" destination="-1" eventType="touchUpInside" id="L7H-RP-Oax"/>
+                        <action selector="logout:" destination="-2" eventType="touchUpInside" id="v6h-1p-b8S"/>
                     </connections>
                 </button>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Lola Forner" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3ic-hO-IZ3" userLabel="Name">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lola Forner" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3ic-hO-IZ3" userLabel="Name">
                     <rect key="frame" x="116" y="22" width="89" height="18"/>
                     <fontDescription key="fontDescription" name="TransatTextMedium" family="Transat Text" pointSize="18"/>
                     <color key="textColor" red="0.1450980392" green="0.64705882349999999" blue="0.64705882349999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -99,31 +99,6 @@
                         </mask>
                     </variation>
                 </imageView>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="s93-yD-flR">
-                    <rect key="frame" x="122" y="537" width="76" height="30"/>
-                    <state key="normal" title="I'm a Crab!">
-                        <color key="titleColor" red="0.1450980392" green="0.64705882349999999" blue="0.64705882349999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                    </state>
-                    <connections>
-                        <action selector="giveFeedback:" destination="-1" eventType="touchUpInside" id="1TY-sk-BMh"/>
-                    </connections>
-                </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YW7-wb-mH4">
-                    <rect key="frame" x="0.0" y="538" width="60" height="30"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="60" id="QJz-6v-OQp"/>
-                        <constraint firstAttribute="height" constant="30" id="vFk-Xe-SjC"/>
-                    </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="10"/>
-                    <state key="normal" title="Log out">
-                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                    </state>
-                    <connections>
-                        <action selector="logout:" destination="-2" eventType="touchUpInside" id="xgV-6O-1qG"/>
-                    </connections>
-                </button>
                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="settings-icon-age" translatesAutoresizingMaskIntoConstraints="NO" id="Tiq-Jx-Jmw">
                     <rect key="frame" x="24" y="228" width="25" height="25"/>
                     <constraints>
@@ -159,25 +134,25 @@
                         <constraint firstAttribute="height" constant="25" id="tID-al-Pme"/>
                     </constraints>
                 </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="31 years old" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5ee-BL-JGE">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="31 years old" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5ee-BL-JGE">
                     <rect key="frame" x="65" y="236" width="78" height="15"/>
                     <fontDescription key="fontDescription" name="TransatTextMedium" family="Transat Text" pointSize="15"/>
                     <color key="textColor" red="0.1450980392" green="0.64705882349999999" blue="0.64705882349999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="You’re a VP of Commerce" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oh4-96-yng">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You’re a VP of Commerce" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oh4-96-yng">
                     <rect key="frame" x="65" y="291" width="166" height="15"/>
                     <fontDescription key="fontDescription" name="TransatTextMedium" family="Transat Text" pointSize="15"/>
                     <color key="textColor" red="0.1450980392" green="0.64705882349999999" blue="0.64705882349999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Studied at Yale University" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="20m-eu-yIP">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Studied at Yale University" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="20m-eu-yIP">
                     <rect key="frame" x="65" y="346" width="171" height="15"/>
                     <fontDescription key="fontDescription" name="TransatTextMedium" family="Transat Text" pointSize="15"/>
                     <color key="textColor" red="0.1450980392" green="0.64705882349999999" blue="0.64705882349999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="You’re about 5' 10&quot; tall" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pg4-G6-NiR">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You’re about 5' 10&quot; tall" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pg4-G6-NiR">
                     <rect key="frame" x="65" y="401" width="148" height="15"/>
                     <fontDescription key="fontDescription" name="TransatTextMedium" family="Transat Text" pointSize="15"/>
                     <color key="textColor" red="0.1450980392" green="0.64705882349999999" blue="0.64705882349999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -189,7 +164,7 @@
                         <fragment content="Outgoing guy tired of games and looking for someone to share many laughs to come and explore the world with.">
                             <attributes>
                                 <color key="NSColor" red="0.14509803921568629" green="0.6470588235294118" blue="0.6470588235294118" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <font key="NSFont" metaFont="system" size="15"/>
+                                <font key="NSFont" size="15" name="TransatTextMedium"/>
                                 <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="wordWrapping" baseWritingDirection="natural" minimumLineHeight="19"/>
                             </attributes>
                         </fragment>
@@ -204,6 +179,7 @@
                 </label>
             </subviews>
             <constraints>
+                <constraint firstItem="r72-wg-Xj7" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="0Vw-oe-hIw"/>
                 <constraint firstItem="Tiq-Jx-Jmw" firstAttribute="top" secondItem="Nrc-Dc-N50" secondAttribute="bottom" constant="32" id="0or-Fj-RLr"/>
                 <constraint firstItem="xt9-MA-Rd9" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="3MR-LT-Kwq"/>
                 <constraint firstItem="SOZ-ON-PUJ" firstAttribute="centerX" secondItem="wEw-mJ-zT3" secondAttribute="centerX" id="6Hj-SM-N4K"/>
@@ -219,7 +195,7 @@
                 <constraint firstItem="CsQ-Yu-Ry6" firstAttribute="top" secondItem="SOZ-ON-PUJ" secondAttribute="bottom" constant="30" id="MSp-6g-gek"/>
                 <constraint firstItem="Nrc-Dc-N50" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="60" id="Mqx-72-nqb"/>
                 <constraint firstItem="pg4-G6-NiR" firstAttribute="bottom" secondItem="CsQ-Yu-Ry6" secondAttribute="bottom" constant="-2" id="NhN-Zd-yky"/>
-                <constraint firstItem="YW7-wb-mH4" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="QZp-PO-fz3"/>
+                <constraint firstAttribute="trailing" secondItem="r72-wg-Xj7" secondAttribute="trailing" id="RHo-gD-UqB"/>
                 <constraint firstItem="wEw-mJ-zT3" firstAttribute="top" secondItem="Tiq-Jx-Jmw" secondAttribute="bottom" constant="30" id="RmA-hw-1oO"/>
                 <constraint firstAttribute="trailingMargin" secondItem="Api-ed-xez" secondAttribute="trailing" constant="24" id="U1C-y9-Fab"/>
                 <constraint firstItem="MPP-9T-yb0" firstAttribute="top" secondItem="CsQ-Yu-Ry6" secondAttribute="bottom" constant="30" id="XtK-6s-6XQ"/>
@@ -231,16 +207,11 @@
                 <constraint firstItem="MPP-9T-yb0" firstAttribute="centerX" secondItem="CsQ-Yu-Ry6" secondAttribute="centerX" id="iyy-yM-g66"/>
                 <constraint firstItem="l2F-DP-UVJ" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="juZ-r7-qd0"/>
                 <constraint firstItem="xt9-MA-Rd9" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="ln9-ZB-BJk"/>
-                <constraint firstAttribute="bottom" secondItem="YW7-wb-mH4" secondAttribute="bottom" id="lsf-om-bcN"/>
-                <constraint firstItem="l2F-DP-UVJ" firstAttribute="centerY" secondItem="s93-yD-flR" secondAttribute="centerY" id="moX-25-CPV"/>
                 <constraint firstItem="Api-ed-xez" firstAttribute="bottom" secondItem="MPP-9T-yb0" secondAttribute="bottom" constant="-2" id="r6Z-tU-MSR"/>
                 <constraint firstItem="pg4-G6-NiR" firstAttribute="leading" secondItem="20m-eu-yIP" secondAttribute="leading" id="rEM-ad-i4r"/>
                 <constraint firstAttribute="centerX" secondItem="3ic-hO-IZ3" secondAttribute="centerX" id="rlA-Ud-a94"/>
-                <constraint firstAttribute="centerX" secondItem="s93-yD-flR" secondAttribute="centerX" id="tNs-5O-lOe"/>
                 <constraint firstItem="oh4-96-yng" firstAttribute="bottom" secondItem="wEw-mJ-zT3" secondAttribute="bottom" constant="-2" id="vWA-G0-oA0"/>
-                <constraint firstAttribute="bottom" secondItem="xdl-4W-oNP" secondAttribute="bottom" constant="5" id="vX0-F5-K7C"/>
                 <constraint firstItem="oh4-96-yng" firstAttribute="leading" secondItem="5ee-BL-JGE" secondAttribute="leading" id="xyd-cX-5gL"/>
-                <constraint firstAttribute="trailing" secondItem="xdl-4W-oNP" secondAttribute="trailing" constant="8" id="zHA-EM-cpT"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <nil key="simulatedTopBarMetrics"/>
