--- a/Ketch/UserInterface/Permission/PermissionView.xib
+++ b/Ketch/UserInterface/Permission/PermissionView.xib
@@ -18,6 +18,7 @@
                 <outlet property="imageView" destination="MdT-Br-GQd" id="9wZ-QC-iiY"/>
                 <outlet property="mainButton" destination="77j-r1-nyx" id="eAJ-hb-SfN"/>
                 <outlet property="titleLabel" destination="Hqp-aq-0Sx" id="Xmb-rZ-Ego"/>
+                <outlet property="view" destination="iN0-l3-epB" id="I5D-bP-0Oe"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -25,7 +26,7 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Almost there!" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hqp-aq-0Sx">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Almost there!" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hqp-aq-0Sx">
                     <rect key="frame" x="123" y="20" width="129" height="21"/>
                     <fontDescription key="fontDescription" name="TransatTextBold" family="Transat Text" pointSize="21"/>
                     <color key="textColor" red="0.092987515032291412" green="0.64821720123291016" blue="0.65024715662002563" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -56,8 +57,11 @@
                             <real key="value" value="28"/>
                         </userDefinedRuntimeAttribute>
                     </userDefinedRuntimeAttributes>
+                    <connections>
+                        <action selector="mainAction:" destination="-1" eventType="touchUpInside" id="uxr-28-sPw"/>
+                    </connections>
                 </button>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EGN-m4-zNA" customClass="DesignableLabel" customModule="Ketch" customModuleProvider="target">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EGN-m4-zNA" customClass="DesignableLabel" customModule="Ketch" customModuleProvider="target">
                     <rect key="frame" x="20" y="422" width="335" height="78"/>
                     <attributedString key="attributedText">
                         <fragment content="We use your Facebook profile to get photos and bio. We never post without your permission.">
